Separate loading code

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node out/Bot.js"
+    "start": "node out/Init.js"
   },
   "keywords": [],
   "author": "",
