--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "dependencies": {
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
-    "@keyv/sqlite": "^2.0.2",
     "discord-api-types": "^0.23.1",
-    "discord.js": "^13.1.0",
-    "keyv": "^4.0.3"
+    "discord.js": "^13.6.0",
+    "lowdb": "^3.0.0"
   }
 }
