Refactor and ES Modules lowdb is an es module, so settings had to be changed to accomodate

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+    "type": "module",
     "name": "discord-pfp-tracker",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "index.mjs",
     "scripts": {
         "build": "tsc",
-        "start": "node out/Init.js"
+        "start": "node --experimental-specifier-resolution=node --enable-source-maps out/Init.js"
     },
     "keywords": [],
     "author": "",
