--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
-        "sourceRoot": "./src",
 
         /* Basic Options */
         "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', 'ES2021', or 'ESNEXT'. */,
         "module": "es6" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */,
         "moduleResolution": "node",
-        "declaration": true /* Generates corresponding '.d.ts' file. */,
-        "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
-        "sourceMap": true /* Generates corresponding '.map' file. */,
+
+        // "sourceRoot": "./src",
+        // "declaration": true /* Generates corresponding '.d.ts' file. */,
+        // "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
+        // "sourceMap": true /* Generates corresponding '.map' file. */,
         "outDir": "./out" /* Redirect output structure to the directory. */,
         "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
 
