--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 poise = "0.6.1"
+serde = { version = "1.0.197", features = ["derive"] }
 serenity = "0.12.1"
-tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
+surrealdb = { version = "1.3.1", features = ["kv-mem"] }
+tokio = { version = "1.36.0", features = ["macros","rt-multi-thread"] }
